# fpfind

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  random ideas.md  readme.md
docs/: README.md  dataset_description.md  dataset_result.md  explain.md
freqdetuneg2/: generate_freqdetuneg2.py
main code/: explain.md  time_freq.py  time_freq_g2.py
main_code/: Makefile  explain.md  freqcd.c  time_freq.py
scripts/: fpfind_postinstall
src/: freqcd.c  g2_two_timestamps.py
src/fpfind/: __init__.py  _postinstall  fpfind.py  fpplot.py  freqcd  freqcd.c  main.py
src/fpfind/lib/: constants.py  g2_two_timestamps.py  generate_freqcd_testcase.py  logging.py  parse_epochs.py  parse_timestamps.py  utils.py
src/lib/: getopt.c
src/pfind/: __init__.py  freqcd.c  read_epoch.py  time_freq.py
src/pfind/lib/: constants.py  generate_freqcd_testcase.py  parse_epochs.py  parse_timestamps.py  time_freq_g2.py  utils.py
tests/: conftest.py  test_fpfind_epoch.py  test_fpfind_timestamp.py
tests/freqcd/: test_freqcd.py  test_freqcd_overflow.py  test_freqcd_update.py
tests/parse_epochs/: test_basic_usage.py  test_limits.py  test_readT1_outputs.py  test_readT2_outputs.py
tests/parse_timestamps/: test_output_type.py
