[tool.poetry]
name = "fpfind"
version = "0.1.4"
description = ""
authors = ["Xu Zifang <francium0415@gmail.com>", "Justin Peh <pehyuxiang@gmail.com>"]
license = "GPLv2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
scipy = "^1.10.0"
tqdm = "^4.65.0"

[tool.poetry.scripts]
# Poetry 1.2.0a1 required for script file reference
fpfind_postinstall = {reference = "scripts/fpfind_postinstall", type = "file"}
freqcd = {reference = "src/fpfind/freqcd", type = "file"}
fpfind = "fpfind.main:main"
parse_timestamps = "fpfind.lib.parse_timestamps:main"
generate_freqcd_testcase = "fpfind.lib.generate_freqcd_testcase:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
